PHSHOE-114: Code cleanup for Catalog Module
